added PageResponse class to common and pagination to getAllTeams