@@ -2,15 +2,17 @@ package lviv.syrovyi.footballManager.team.service.impl;
 
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import lviv.syrovyi.footballManager.common.dto.response.PageResponse;
 import lviv.syrovyi.footballManager.team.controller.dto.response.TeamResponseDTO;
 import lviv.syrovyi.footballManager.team.mapper.TeamMapper;
 import lviv.syrovyi.footballManager.team.repository.TeamRepository;
 import lviv.syrovyi.footballManager.team.repository.entity.Team;
 import lviv.syrovyi.footballManager.team.service.TeamService;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -21,9 +23,19 @@ public class TeamServiceImpl implements TeamService {
     private final TeamMapper teamMapper;
 
     @Override
-    public List<TeamResponseDTO> getAllTeams() {
-        List<Team> allTeams = teamRepository.findAll();
+    public PageResponse<TeamResponseDTO> getAllTeams(Pageable pageable) {
+        Page<Team> allTeams = teamRepository.findAll(pageable);
 
-        return allTeams.stream().map(teamMapper::mapToDTO).collect(Collectors.toList());
+        List<TeamResponseDTO> collectedDTOs = allTeams
+                .stream()
+                .map(teamMapper::mapToDTO)
+                .toList();
+
+        return PageResponse.<TeamResponseDTO>builder()
+                .totalPages((long) allTeams.getTotalPages())
+                .pageSize((long) pageable.getPageSize())
+                .totalElements(allTeams.getTotalElements())
+                .content(collectedDTOs)
+                .build();
     }
 }
